# VisionAlgorithms

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  README.md  dependencies.cmake  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci-with-cuda.yml  ci.yml  super-linter.yml
app/: main.cpp
cmake/: AutoDetectCudaArch.cmake  CodeCoverage.cmake  Dependencies.cmake  Dependencies.cmake.deprecated  Misc.cmake
include/: constants.h  linalg.h
include/algorithms/: abstract_homographer.h  base_homographer.h  cpu_homographer.h  cuda_homographer.cuh  homography.h
include/cuda_helpers/: cuda_constants.h  cuda_helper_checks.cuh  cuda_helper_kernels.cuh
src/: homography.cpp
src/algorithms/: abstract_homographer.cpp  base_homographer.cpp  cpu_homographer.cpp  cuda_homographer.cu  homography.cpp
tests/: CMakeLists.txt  dummy.cpp  main.cpp
tests/algorithms/: test_homographer.cpp
tests/test_data/homography/: coords.txt
